tests/transform/unreachable/unreachable_10/sample/output.txt
main.c:3:23: error: directive 'transform' does not contain clause 'remove'
#pragma spf transform remove unreachable
                      ^
1 error generated.
Error while processing main.c.
